--- a/index.qmd
+++ b/index.qmd
@@ -1,39 +1,84 @@
 ---
-#title: "Designing AI that Works for People"
-#subtitle: "Human-centered AI for performance and safety in critical industries." 
-#about:
-  #template: jolla
-  #image: images/profile2.jpg
-  #image-width: 7em
-  #image-shape: round
-  #links:
-    #- text: Services
-      #href: services.qmd
-      #icon: boxes
-    #- text: Projects
-      #href: projects.qmd
-      #icon: boxes
-    #- text: About Me
-      #href: about.qmd
-      #icon: boxes
+#title: "AI Advisory for Safety-Critical Industries"
+format: html
 ---
 
-<!-- Hero Section -->
+::: {.hero style="text-align:center; padding:2rem 1rem;"}
+## Designing AI Systems Operators Can Trust
 
-::: {.hero style="text-align: center; padding: 4rem 2rem;"}
-## Human-AI Evaluation in High-Risk Environments
+Helping organizations in nuclear, defense, and aerospace meet regulatory standards, evaluate AI systems, and strengthen operational resilience.
 
-I help high-risk industries integrate AI systems safely, compliantly, and effectively. My expertise bridges **human factors** and **AI evaluation** in nuclear, insurance, telecom, defense, and other safety-critical sectors.
-
-<a href="capability.pdf" class="btn-hero">Download Capability Statement</a>
+<a href="capability.pdf" class="btn-hero">Download Capability Statement</a> <a href="mailto:youremail@example.com" class="btn-hero" style="margin-left:1rem;">Book a Consultation</a>
 :::
+
+::: section-bg-light
+## Services
+
+::: cards
+::: card
+<h3>🛡 [AI Safety Audits](services.qmd)</h3>
+
+<p>Independent evaluations to uncover hidden failure points in human--AI decision support before regulators or incidents intervene.</p>
+:::
+
+::: card
+<h3>📜 Regulatory & Compliance Pathfinding</h3>
+
+<p>Translate EU AI Act, IEC, ISO, and sector standards into actionable, defensible steps for development and deployment.</p>
+:::
+
+::: card
+<h3>👁 Operator Trust & Workload Testing</h3>
+
+<p>Evidence-based validation of usability, workload, and situational awareness to ensure systems enhance performance.</p>
+:::
+
+::: card
+<h3>🎓 Training & Advisory</h3>
+
+<p>Equip engineers, operators, and regulators with proven methods to design, assess, and govern AI safety cases.</p>
+:::
+:::
+:::
+
+::: section-bg-dark
+## Experience
+
+> **Nuclear Control Room Optimization** --- Reduced predicted critical error risk by **25%** through targeted human--AI redesign.
+
+> **AI Compliance Testing** --- Developed testing framework for AI-assisted diagnostics aligned with draft EU AI Act standards.
+
+> **Aerospace Safety Training** --- Delivered human--AI integration training to engineering teams in aerospace and energy sectors.
+:::
+
+::: section-bg-light
+## Contact
+
+<form action="https://api.web3forms.com/submit" method="POST" style="max-width:500px;">
+
+<input type="hidden" name="access_key" value="YOUR_ACCESS_KEY">
+
+<label for="name">Your Name</label><br> <input type="text" id="name" name="name" required style="width:100%; padding:0.5rem; margin-bottom:1rem; border-radius:0.5rem; border:1px solid #ccc;"><br>
+
+<label for="email">Your Email</label><br> <input type="email" id="email" name="_replyto" required style="width:100%; padding:0.5rem; margin-bottom:1rem; border-radius:0.5rem; border:1px solid #ccc;"><br>
+
+<label for="message">Your Message</label><br>
+
+```{=html}
+<textarea id="message" name="message" required style="width:100%; padding:0.5rem; margin-bottom:1rem; border-radius:0.5rem; border:1px solid #ccc;" rows="5"></textarea>
+```
+<br> <button type="submit" class="btn-hero">Send</button>
+
+</form>
+:::
+
 
 ```{=html}
 <style>
-a.btn-hero {
+a.btn-hero, button.btn-hero {
   display: inline-block;
-  background: linear-gradient(90deg, #007f91, #00b3b8) !important;
-  color: #ffffff !important;
+  background: linear-gradient(90deg, #007f91, #00b3b8);
+  color: #fff;
   font-size: 1.2rem;
   font-weight: 600;
   padding: 0.75rem 2rem;
@@ -42,70 +87,60 @@ a.btn-hero {
   transition: all 0.3s ease;
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   border: none;
+  cursor: pointer;
+  margin-top:1rem;
 }
 
-a.btn-hero:hover {
+a.btn-hero:hover, button.btn-hero:hover {
   transform: translateY(-3px);
   box-shadow: 0 8px 20px rgba(0,0,0,0.25);
-  background: linear-gradient(90deg, #00b3b8, #007f91) !important;
+  background: linear-gradient(90deg, #00b3b8, #007f91);
   text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.5rem;
+  margin: 2rem 0;
+}
+
+.card {
+  background: #ffffff;
+  border: 1px solid #e5e7eb;
+  border-radius: 0.75rem;
+  padding: 1.5rem;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+.card h3 {
+  margin-top:0;
+  margin-bottom:0.5rem;
+  color:#007f91;
+}
+
+.section-bg-light {
+  background-color: #eef2f5;
+  padding: 2rem 1rem;
+  border-radius: 0.75rem;
+  margin: 2rem 0;
+}
+
+.section-bg-dark {
+  background-color: #ffffff;
+  padding: 2rem 1rem;
+  border-radius: 0.75rem;
+  margin: 2rem 0;
+}
+
+a {
+  color: #007f91;  /* match your primary button color */
+  text-decoration: none; /* optional: remove underline */
+}
+
+a:hover {
+  color: #00b3b8;  /* optional: gradient-end color on hover for consistency */
+  text-decoration: underline; /* optional: add hover effect */
 }
 </style>
 ```
-## Services {#services}
-
-::: {.grid .grid-2}
-### Human--AI Interaction Audits
-
-Identify and address risks in AI-assisted decision-making environments.
-
-### Compliance & Regulatory Support
-
-Navigate EU AI Act, IEC, ISO, and sector-specific safety requirements.
-
-### Usability & Workload Testing
-
-Ensure operators can perform effectively and safely with AI tools.
-
-### Training & Advisory
-
-Equip engineers, operators, and regulators with human--AI safety best practices.
-:::
-
-## Experience {#experience}
-
-> **Nuclear Control Room Optimization** -- Reduced predicted critical error risk by **25%** through targeted human--AI interaction redesign.
-
-> **AI Compliance Testing** -- Developed testing framework for AI-assisted diagnostics aligned with draft EU AI Act standards.
-
-> **Aerospace Safety Training** -- Delivered human--AI integration training to engineering teams in aerospace and energy sectors.
-
-------------------------------------------------------------------------
-
-## Contact {#contact}
-
-<!-- Contact Form -->
-
-<form action="https://api.web3forms.com/submit" method="POST" style="max-width:500px;">
-  <input type="hidden" name="access_key" value="2b528a51-63a0-4981-8437-7586a29d6b34">
-
-  <label for="name">Your Name</label><br>
-  <input type="text" id="name" name="name" required style="width:100%; padding:0.5rem; margin-bottom:1rem;"><br>
-
-  <label for="email">Your Email</label><br>
-  <input type="email" id="email" name="_replyto" required style="width:100%; padding:0.5rem; margin-bottom:1rem;"><br>
-
-  <label for="message">Your Message</label><br>
-  <textarea id="message" name="message" required style="width:100%; padding:0.5rem; margin-bottom:1rem;" rows="5"></textarea>
-  <br>
-
-  <button type="submit" style="background-color:#007f91; color:white; padding:0.75rem 2rem; border:none; border-radius:0.5rem; font-size:1rem; cursor:pointer;">
-    Send
-  </button>
-</form>
-
-
-
-
-<!-- <input type="hidden" name="access_key" value="2b528a51-63a0-4981-8437-7586a29d6b34" -->
-
