--- a/index.qmd
+++ b/index.qmd
@@ -13,6 +13,6 @@ output:
 
 #### **Davide Gentile**
 
-I help people design AI they can trust. From nuclear control rooms to insurance models, I study how humans interact with AI and design ways to make systems reliable and safe. I\'ve led human-in-the-loop research projects, advised regulators, and evaluated AI for bias and compliance. Right now, I\'m developing a human-centered framework to measure the reliability of AI evaluations. You can check out my [publications](https://scholar.google.com/citations?user=hpdB69EAAAAJ&hl=en&oi=ao) and [projects](projects.qmd) to see what I\'ve worked on.
+I help make AI systems people can trust. I study how humans interact with AI and design ways to make systems reliable and safe, from nuclear control rooms to insurance applications. I've led human-in-the-loop research projects, advised regulators, and evaluated AI for bias and compliance. Right now, I'm developing a human-centered framework to measure the reliability of AI evaluations. You can check out my [publications](https://scholar.google.com/citations?user=hpdB69EAAAAJ&hl=en&oi=ao) and [projects](projects.qmd) to see what I've worked on.
 
 📧 gentiled at gmail dot com \| 🔗 [LinkedIn](https://www.linkedin.com/in/davide-gentile-/)
