--- a/portfolio/ux-ericsson/index.qmd
+++ b/portfolio/ux-ericsson/index.qmd
@@ -1,10 +1,26 @@
 ---
-title: "Development and UX Analysis of ML Model Interpretability Tool"
-author: "Davide Gentile"
-description: "During my internship at Ericsson, I contributed to the development of a glyph-based polar chart to enhance the interpretability of machine learning models. "
-date: "2024-06-12"
-image: "picture1.png"
+title: "Explainable Machine Learning Tools for Reliability Engineers"
+author: "Ericsson"
+description: "Internship via Mitacs Accelerate Fellowship at Ericsson's Gobal AI Accelerator; designed and evaluated tools to support engineers’ decision-making and usability. "
+date: "2023-09"
+image: "img.png"
 categories: [UX, Explainable AI]
 ---
 
 This project developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models for data scientists. The tool enables comparisons of explanations across different models and computational methods. User experience evaluations with Ericsson data scientists showed that the GPC helped identify key model variables, compare various explanation techniques, and perform logical reviews of model outputs. This project was conducted during my internship at Ericsson's Global AI Accelerator. The development of the prototype and its evaluation with Ericsson's data scientists was published in the Journal of Ergonomics in Design and is available [here](https://journals.sagepub.com/doi/abs/10.1177/10648046231166047).
+
+-    -- Human Factors/UX internship at Ericsson; designed and evaluated tools to support engineers\' decision-making and usability.
+
+```{=html}
+<!-- -->
+```
+-   
+
+    *Human-in-the-Loop Experiments on Machine Learning Explainability* -- PhD research; developed methods to study operator interaction with automated process control systems.
+
+```{=html}
+<!-- -->
+```
+-   
+
+    *Human--Automation Interaction in Nuclear Control Systems* -- Postdoctoral research; focused on operator decision-making and interface design for safety-critical nuclear systems.
