--- a/portfolio/nuclear-performance-measurement/index.qmd
+++ b/portfolio/nuclear-performance-measurement/index.qmd
@@ -1,7 +1,6 @@
 ---
-title: "Human–Automation Interaction in Nuclear Control Systems"
-author: "University of Toronto"
-description: "Postdoctoral research; focused on operator decision-making and interface design for safety-critical nuclear systems. "
+title: "Human–Automation Interaction in Operation of Small Modular Reactors"
+description: "**Univeristy of Toronto** Postdoctoral research; focused on operator decision-making and interface design for operation of small modular reactors. Funded by NSERC and CNSC. "
 date: "2025-06"
 image: "img1.jpg"
 #categories: [UX, Explainable AI]
