--- a/about.qmd
+++ b/about.qmd
@@ -16,16 +16,10 @@ title: "About"
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-I'm a Human Factors engineer with six years of experience in mixed-methods research, teaching, and consulting across safety-critical industries. I have worked on projects spanning nuclear power, process control, transportation, telecommunications, and insurance.
+I'm a Human Factors engineer who translates research into practical improvements for human-machine systems. My work ensures technology enhances human abilities, meets industry standards, and delivers effective and enjoyable experiences.
 
-**Specialties**
+Over the past six years, I've worked across safety-critical industries, from nuclear power plants to telecommunications to insurance risk models. What drives me is the belief that thoughtful human factors research can prevent accidents and help people perform at their best when it matters most.
 
-I specialize in mixed-methods research, including human-in-the-loop simulations, statistical inference, and cognitive task analysis. I developed methods to evaluate the explainability of machine learning models and led research on human-automation interaction in small modular reactor operations. This work has led to several peer-reviewed publications and recognition from the Schwartz Reisman Institute for Technology and Society.
+Currently, I work as a human factors consultant at Kinectrics, where I help organizations implement evidence-based insights to reduce risk and improve performance in safety-critical systems. This builds directly on my postdoctoral research that informed nuclear safety regulations.
 
-**Experience**
-
-I have led research and consulting projects from A to Z, taught human factors and statistics at the university level, conducted machine learning analyses for insurance risk models, and evaluated ML interfaces for reliability engineers at Ericsson's Global AI Accelerator. Most recently, I worked as Postdoctoral Researcher and Team Lead of Experimentation and Analysis at the University of Toronto, directing a team studying human-automation interaction in small modular reactor operations. This work advances the evidence base for nuclear human factors regulations, ensuring automation and interfaces promote system reliability and operator performance. This research was funded by Natural Sciences and Engineering Research Council of Canada and the Canadian Nuclear Safety Commission. During this time, I have also contributed to multi-year research proposals and participated in OECD Nuclear Energy Agency AI safety initiatives.
-
-**Values**
-
-I value authenticity, cultivating connections with people, staying curious, appreciating nature, and finding meaning in work. Professionally, I translate research into practical improvements for human-machine systems, ensuring technology enhances human abilities, meets industry standards, and delivers enjoyable, effective experiences.
+I value authenticity, cultivating connections with people, staying curious, appreciating nature, and finding meaning in work. I believe the best engineering solutions come from understanding both the technical systems and the people who operate them, which requires getting into the real world and using a mix of quantitative and qualitative methods.
